--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,21 @@
-<h1>タスク一覧</h1>
+<% if logged_in? %>
+    
+    <p>ログイン完了ユーザ: <%= current_user.name %></p>
 
-<ul>
-  <% @tasks.each do |task| %>
-    <li><%= link_to task.id, task %> : <%= task.status %> &gt; <%= task.content %></li>
-  <% end %>
-</ul>
-<%= link_to '新規タスクの投稿', new_task_path %>
+    <h1>タスク一覧</h1>
+
+    <ul>
+      <% @tasks.each do |task| %>
+        <li><%= link_to task.id, task %> : <%= task.status %> &gt; <%= task.content %></li>
+      <% end %>
+    </ul>
+  
+  <%= link_to '新規タスクの投稿', new_task_path %>
+  <%= link_to 'Logout', logout_path, method: :delete %>
+    
+<% else %>
+
+   <%= link_to 'Sign up now!', new_user_path, class: 'btn btn-lg btn-primary' %>
+   <%= link_to 'Login', login_path, class: 'btn btn-lg btn-primary' %>
+  
+<% end %>
