--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: task, local: true) do |f| %>
 
- <% if task.errors.any? %>
+   <% if task.errors.any? %>
     <div id="error_explanation">
       <ul>
         <% task.errors.full_messages.each do |msg| %>
@@ -8,14 +8,14 @@
         <% end %>
       </ul>
     </div>
- <% end %>
-
-  <%= f.label :content, 'タスク' %>
-  <%= f.text_field :content %>
-
-  <%= f.label :status, 'ステータス' %>
-  <%= f.text_field :status %>
-
-
-  <%= f.submit '投稿' %>
+   <% end %>
+   <div class="form-group">
+          <%= f.label :content, "仕事内容" %>
+          <%= f.text_field :content, class: 'form-control' %>
+   </div>
+   <div class="form-group">
+          <%= f.label :status, '進捗状況' %>
+          <%= f.text_field :status, class: 'form-control' %>
+   </div>
+          <%= f.submit 'Post', class: 'btn btn-primary btn-block' %>
 <% end %>
