--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,21 +1,32 @@
 <% if logged_in? %>
-    
-    <p>ログイン完了ユーザ: <%= current_user.name %></p>
-
-    <h1>タスク一覧</h1>
-
-    <ul>
-      <% @tasks.each do |task| %>
-        <li><%= link_to task.id, task %> : <%= task.status %> &gt; <%= task.content %></li>
-      <% end %>
-    </ul>
-  
-  <%= link_to '新規タスクの投稿', new_task_path %>
-  <%= link_to 'Logout', logout_path, method: :delete %>
+<div class="center jumbotron">
+  <div class="text-center">
+    <h1>ＴＡＳＫ　ＬＩＳＴ</h1>
+   </div>
+</div>
+ 
+ <div class="row">
+    <aside class="col-sm-4" >
+        <%= render 'tasks/form', task: @task %>
+    </aside>
+    <div class="col-sm-8">
+        <%= render 'tasks/tasks', tasks: @tasks %>
+    </div>
+    <div class="ml-3">
+    <%= link_to 'Logout', logout_path, method: :delete %>
+    </div>
+ </div>
     
 <% else %>
 
+<div class="center jumbotron">
+  <div class="text-center">
+    <h1>ＴＡＳＫ　ＬＩＳＴ</h1>
+   </div>
+</div>
+<div class="text-center" >
    <%= link_to 'Sign up now!', new_user_path, class: 'btn btn-lg btn-primary' %>
    <%= link_to 'Login', login_path, class: 'btn btn-lg btn-primary' %>
+</div>
   
 <% end %>
