--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,6 +5,17 @@
 <div class="row">
     <div class="col-sm-6 offset-sm-3">
       <%= form_with(model: @user, local: true) do |f| %>
+        
+        <% if @user.errors.any? %>
+         <div id="error_explanation">
+           <ul>
+             <% @user.errors.full_messages.each do |msg| %>
+               <li><%= msg %></li>
+             <% end %>
+           </ul>
+         </div>
+        <% end %>
+     
         <div class="form-group">
             <%= f.label :name, "Name" %>
             <%= f.text_field :name , class: "form-control" %>
