--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -1,8 +1,8 @@
-<%= link_to current_user.name, current_user %>
+<%= current_user.name + "さんのタスク一覧" %>
     <% tasks.each do |task| %>
         <ul class="list-unstyled">
             <li>
-                <%= link_to task.content, task %> <span class="text-muted">posted at <%= task.created_at %></span>
+                <%= task.status %> ＞ <%= link_to task.content, task %> <span class="text-muted">posted at <%= task.created_at %></span>
             </li>
         </ul>
       <%= paginate tasks %>
